methods.returning.MethodsReturning.scala.error
Erreur de compilation :
MethodsReturning:22: error: type mismatch;
 found   : Unit
 required: Boolean
    if(vuebiscuit){return}
                   ^